# octree-go

./: .gitignore  README.md  _build_backend.py  build_local.sh  build_local_mac.sh  build_shared_library.sh  demo_notebook.ipynb  export.go  go.mod  hatch_build.py  main.go  pyproject.toml  python_test.py
.github/workflows/: release.yaml
algo/: min_distance.go
data/: data3d.go  octree.go
data_structure/: data3d.go  node.go  tree.go
go/: export.go  go.mod
go/algo/: min_distance.go
go/data/: data3d.go  octree.go
lib/: export.go
pyoctree/: octree.py
python/pyoctree/: octree.py
