requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "_build_backend"

[project]
name = "pyoctree"
dynamic = ["version"]
requires-python = ">=3.10"
description = "A package that implements the octree data structure written in Go, and an algorithm to find the minimum distance from a point to a binary mask."
authors = [
  {name = "Melisande Croft", email = "melisande.croft@fht.org"}
]

[tool.setuptools]
packages = ["pyoctree"]
zip-safe = false
package-data = {"pyoctree" = ["**/*.so", "**/*.dylib"]}

[tool.setuptools_scm]
# Configure setuptools-scm versioning
write_to = "pyoctree/_version.py"