[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyoctree"
dynamic = ["version"]
requires-python = ">=3.10"
description = "A package that implements the octree data structure written in Go, and an algorithm to find the minimum distance from a point to a binary mask."
authors = [
  {name = "Melisande Croft", email = "melisande.croft@fht.org"}
]
dependencies = [
    "numpy"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pyoctree"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.hooks.custom]
go-source = "."
go-package = "export.go"
output-name = "octree"
target-dir = "pyoctree/_lib"

[tool.cibuildwheel]
skip = ["pp*", "*-musllinux*"]
test-requires = ["pytest"]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
before-all = [
    "curl -OL https://golang.org/dl/go1.21.0.linux-$(uname -m | sed 's/x86_64/amd64/;s/aarch64/arm64/').tar.gz",
    "tar -C /usr/local -xzf go1.21.0.linux-*.tar.gz",
]
environment = { PATH = "/usr/local/go/bin:$PATH" }